--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/caisr.github.io/favicon.ico" />
+  <link rel="icon" href="/madao.github.io/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MADAO的开花观察日记</title>
-<link rel="stylesheet" href="/caisr.github.io/assets/style.a39e850e.css">
+<link rel="stylesheet" href="/madao.github.io/assets/style.5dc6560e.css">
 </head>
 <body>
   <div id="app"></div>
   
-<script type="module" src="/caisr.github.io/assets/index.260cff12.js"></script>
+<script type="module" src="/madao.github.io/assets/index.4b982867.js"></script>
 </body>
 </html>
