--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/madao.github.io/favicon.ico" />
+  <link rel="icon" href=/madao.github.io/favicon.ico />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MADAO的开花观察日记</title>
-<link rel="stylesheet" href="/madao.github.io/assets/style.1ed98eb4.css">
+<script type="module" crossorigin src="/madao.github.io/assets/index.10dc86c2.js"></script>
+  <link rel="modulepreload" href="/madao.github.io/assets/highlight.01181390.js">
+  <link rel="stylesheet" href="/madao.github.io/assets/index.0527d123.css">
+  <link rel="stylesheet" href="/madao.github.io/assets/highlight.07fcb2a6.css">
 </head>
 <body>
   <div id="app"></div>
   
-<script type="module" src="/madao.github.io/assets/index.6d75380f.js"></script>
 </body>
 </html>
