--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href=/madao.github.io/favicon.ico />
+  <link rel="icon" href="/madao.github.io/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MADAO的开花观察日记</title>
-<script type="module" crossorigin src="/madao.github.io/assets/index.281e0fde.js"></script>
-  <link rel="modulepreload" href="/madao.github.io/assets/highlight.01181390.js">
-  <link rel="stylesheet" href="/madao.github.io/assets/index.0527d123.css">
-  <link rel="stylesheet" href="/madao.github.io/assets/highlight.07fcb2a6.css">
+<script type="module" crossorigin src="/madao.github.io/assets/index.97f864a1.js"></script>
+  <link rel="modulepreload" href="/madao.github.io/assets/vendor.e4dbb408.js">
+  <link rel="stylesheet" href="/madao.github.io/assets/index.9d33356e.css">
+  <link rel="stylesheet" href="/madao.github.io/assets/vendor.cc1e2d17.css">
 </head>
 <body>
   <div id="app"></div>
