--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/madao.github.io/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MADAO的开花观察日记</title>
+  <title>MADAO观察日记</title>
 <script type="module" crossorigin src="/madao.github.io/assets/index.0889534a.js"></script>
   <link rel="modulepreload" href="/madao.github.io/assets/vendor.5cb0fa5e.js">
   <link rel="stylesheet" href="/madao.github.io/assets/index.28625d19.css">
